--- a/views/member.html
+++ b/views/member.html
@@ -93,7 +93,7 @@
   <h3># 2016~</h3>
   김진형 / 컴퓨터공학부 14<br>
   방성원 / 컴퓨터공학부 15<br>
-  이주연 / 시각디자인 11<br>
+  이주현 / 시각디자인 11<br>
   장렬 / 컴퓨터공학부 14<br>
   정형식 / 자유전공학부 10<br>
 </div>
