fix policy page css

--- a/views/privacy_policy.html
+++ b/views/privacy_policy.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>SNUTT 개인정보취급방침</title>
   </head>
-  <body style="max-width:500px;">
+  <body style="max-width:500px; margin: 0 auto; font-family: sans-serif;">
     <h1>SNUTT 개인정보취급방침</h1>
     <pre style="white-space:pre-wrap;">
 총칙
