--- a/views/member.html
+++ b/views/member.html
@@ -25,7 +25,7 @@
   @import url(https://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
   * {
-    font-family:'Nanum Gothic', serif,verdana !important; 
+    font-family:'Nanum Gothic', sans-serif !important; 
     font-weight:normal;
     box-shadow:none !important;
     text-shadow:none !important;
