--- a/views/terms_of_service.html
+++ b/views/terms_of_service.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>SNUTT 이용약관</title>
   </head>
-  <body style="max-width:800x;">
+  <body style="max-width:500px; margin: 0 auto; font-family: sans-serif;">
     <h1>SNUTT 이용약관</h1>
     <pre style="white-space:pre-wrap;">
 제1장 총칙
