fix policy page css (2)

--- a/views/privacy_policy.html
+++ b/views/privacy_policy.html
@@ -3,10 +3,26 @@
   <head>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>SNUTT 개인정보취급방침</title>
+    <style>
+      @import url(https://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css);
+      @import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
+      body {
+        max-width:600px; margin: 0 auto; padding: 1rem 1rem;
+      }
+      h1 {
+        font-family: 'Noto Sans CJK KR', 'Noto Sans KR', sans-serif;
+      }
+      pre {
+        font-family: 'Nanum Gothic Coding', 'Courier New', monospace;
+        font-size: 0.9em;
+        line-height: 1.4em;
+        white-space: pre-wrap;
+      }
+    </style>
   </head>
-  <body style="max-width:500px; margin: 0 auto; font-family: sans-serif;">
+  <body>
     <h1>SNUTT 개인정보취급방침</h1>
-    <pre style="white-space:pre-wrap;">
+    <pre>
 총칙
 WaffleStudio는 스누티티(SNUTT) 및 관련 제반 서비스(이하 “서비스”라고 합니다)를 이용하는 회원의 개인정보 보호를 소중하게 생각하고, 회원의 개인정보를 보호하기 위하여 항상 최선을 다해 노력하고 있습니다.
 WaffleStudio는 개인정보 보호 관련 주요 법률인 개인정보 보호법, 정보통신망 이용촉진 및 정보보호 등에 관한 법률(이하 “정보통신망법”이라고 합니다.)을 비롯한 모든 개인정보 보호에 관련 법률 규정 및 국가기관 등이 제정한 고시, 훈령, 지침 등을 준수합니다.
