--- a/views/terms_of_service.html
+++ b/views/terms_of_service.html
@@ -3,10 +3,26 @@
   <head>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>SNUTT 이용약관</title>
+    <style>
+      @import url(https://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css);
+      @import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
+      body {
+        max-width:600px; margin: 0 auto; padding: 1rem 1rem;
+      }
+      h1 {
+        font-family: 'Noto Sans CJK KR', 'Noto Sans KR', sans-serif;
+      }
+      pre {
+        font-family: 'Nanum Gothic Coding', 'Courier New', monospace;
+        font-size: 0.9em;
+        line-height: 1.4em;
+        white-space: pre-wrap;
+      }
+    </style>
   </head>
-  <body style="max-width:500px; margin: 0 auto; font-family: sans-serif;">
+  <body>
     <h1>SNUTT 이용약관</h1>
-    <pre style="white-space:pre-wrap;">
+    <pre>
 제1장 총칙
 
 제1조(목적)
