이미지 export 기능 추가 #43

--- a/resources/src/api/views/member.html
+++ b/resources/src/api/views/member.html
@@ -103,4 +103,13 @@
 </div>
 
 </body>
+
+<script>
+  function printMessageAfterSecond(msg) {
+      setTimeout(function() {
+          console.log(msg);
+      }, 1000);
+      return "called";
+  }
+</script>
 </html>
