modify Jeongmin's info (#119)

--- a/resources/src/api/views/member.html
+++ b/resources/src/api/views/member.html
@@ -101,7 +101,7 @@
   금진섭 / 서양사학과 14 / iOS<br>
   변다빈 / 언어학과 14 / 서버<br>
   서정록 / 컴퓨터공학부 18 / 기획<br>
-  서정민 / 홍익대 시각디자인과 17 / 기획 및 디자인<br>
+  서정민 / 홍익대 회화과 15 / 기획 및 디자인<br>
   최한결 / 컴퓨터공학부 15 / 서버<br>
 </div>
 
