update snutt website link (#159)

--- a/resources/src/api/views/terms_of_service.html
+++ b/resources/src/api/views/terms_of_service.html
@@ -26,7 +26,7 @@
 제1장 총칙
 
 제1조(목적)
-본 약관은 서울대학교 시간표 작성 서비스 SNUTT(https://www.snutt.kr, 이하 "SNUTT")가 제공하는 관련 제반 서비스의 이용과 관련하여 회원과 SNUTT 사이의 권리·의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 한다.
+본 약관은 서울대학교 시간표 작성 서비스 SNUTT(https://snutt.wafflestudio.com, 이하 "SNUTT")가 제공하는 관련 제반 서비스의 이용과 관련하여 회원과 SNUTT 사이의 권리·의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 한다.
 
 제2조(정의)
 이 약관에서 사용하는 용어의 정의는 다음 각 호와 같다.
